[package]
name = "unit-bindings-analyze-crater-report"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
lazy_static = "1.4.0"
percent-encoding = "2.3.0"
regex = "1.8.4"
rustwide = { version = "0.16.0", features = ["unstable", "unstable-toolchain-ci"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
thiserror = "1.0.40"
tracing = { version = "0.1.37", features = ["attributes"] }
tracing-subscriber = { version = "0.3.17", features = ["fmt", "env-filter", "std"] }
walkdir = "2.3.3"
